--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 db:
   image: postgres
+redis:
+  image: redis
 web:
   build: .
   environment:
@@ -12,3 +14,4 @@ web:
     - "3000:3000"
   links:
     - db
+    - redis
